JDK 21: update JPEs