@@ -1,4 +1,6 @@
-
+/**
+ * To run: `java --enable-preview --source 21 UnnamedClassMainMethodLauncher.java`
+ */
 void main() {
 	System.out.println("Hello world from a unnamed class with a main method o/");
 }
